@@ -2,6 +2,10 @@ strongswan (4.6.4-5) UNRELEASED; urgency=low
 
   * debian/control:
     - and finally libcap-dev linux-any too...
+  * debian/rules:
+    - stop installing logcheck rules manually.
+  * Handle logcheck files from dh_installlogcheck and thus name them correctly
+    so they are not installed in the wrong package.             closes: #679745
 
  -- Yves-Alexis Perez <corsac@debian.org>  Sat, 30 Jun 2012 21:53:28 +0200
 
